# bgpu-sw

./: LICENSE  bgpu_assembler.py  pyproject.toml
openocd/: ftdi.cfg  remote.cfg  ypcb.cfg
src/: bgpu_assembler.py  bgpu_driver.py  bgpu_emu.py  bgpu_instructions.py  bgpu_jtag.py  bgpu_jtag_test.py  bgpu_util.py  compare_regtrace.py  parser.py  util.py
tools/: bgpu_assembler.py  bgpu_emu.py  bgpu_instructions.py  bgpu_jtag.py
