[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "bgpu_sw"
version = "0.0.1"
authors = [
  { name="Tobias Senti", email="git@tsenti.li" },
]
description = "BGPU Software"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/TheMightyDuckOfDoom/bgpu-sw"
Issues = "https://github.com/TheMightyDuckOfDoom/bgpu-sw/issues"
